# LMS-Recipes

./: .env.example  .gitignore  Makefile  README.md  manage.py  pyproject.toml
.cursor/rules/: api-conventions.mdc  database-settings.mdc  deployment-digitalocean.mdc  django-architecture.mdc  plan-desarrollo-sync.mdc  project-overview.mdc
.github/workflows/: ci.yml
apps/accounts/: admin.py  authentication.py  constants.py  jwt.py  managers.py  models.py  selectors.py
apps/accounts/api/: auth_serializers.py  auth_urls.py  auth_views.py  password_serializers.py
apps/accounts/migrations/: 0001_initial.py
apps/accounts/services/: google_auth.py  otp_code.py  password_reset.py  user_auth.py
apps/catalog/: admin.py  constants.py  models.py  selectors.py
apps/catalog/api/: serializers_helpers.py
apps/catalog/migrations/: 0001_initial.py
apps/catalog/services/: category_service.py  course_service.py  language_service.py  recipe_service.py
apps/common/: exceptions.py  models.py  permissions.py  storage.py  storage_config.py
apps/common/api/: exceptions.py  renderers.py  urls.py  views.py
apps/notifications/: tasks.py
apps/notifications/services/: mail.py
config/: api_urls.py  celery.py  urls.py  wsgi.py
config/settings/: base.py  database.py  local.py  production.py  test.py
docs/: BACKEND-ARQUITECTURA.md  PLAN-DESARROLLO.md
docs/apis/: README.md
docs/apis/admin/: README.md
tests/: conftest.py  test_admin_users.py  test_auth.py  test_catalog.py  test_common_api.py  test_database_url.py  test_exceptions.py  test_health.py
(+42 files in other folders)
